# borealis-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
contracts/borealis-engine/: Cargo.toml
contracts/borealis-engine/src/: errors.rs  lib.rs  storage.rs  types.rs  validation.rs
contracts/borealis-engine/tests/: integration.rs
frontend/: .env.example  .eslintrc.json  next.config.js  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: WalletProvider.tsx
frontend/src/hooks/: useContractCall.ts
frontend/src/lib/: soroban.ts
frontend/src/styles/: globals.css
frontend/src/utils/: formatting.ts
